# ML-yew

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  netlify.toml  run-all.sh  site.config  test.py
api/: Cargo.toml  Dockerfile  README.md
api/src/: Config.rs  common.rs  lib.rs  main.rs  sockets.rs
api/src/api/: config-path.toml  config.rs  db.rs  handlers.rs  mod.rs  model.rs  types.rs  upload.rs
api/src/handlers/: home.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  netlify.toml  styles.css
frontend/src/: lib.rs  libs.rs  main.rs  mod.rs  types.rs  upload.rs
frontend/src/component/: button.rs  labels.rs  mod.rs  navbar.rs
frontend/static/: index.html
