[package]
name = "api"
version = "0.26.4"
edition = "2021"

[dependencies]
actix-web = "4.0"
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive="1.0"
env_logger = "0.11.5"
log = "0.4"
# strum_macros = {version = "0.26.4", features = ["derive"]}
strum = { version = "0.26", features = ["derive"] }
derive_more = { version = "1.0", features = ["full"] }
mongodb = "3.1.0"
tokio = { version = "1", features = ["full"] }