[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["api", "frontend"]


[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6.0"
gloo-file = "0.1"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
wasm-bindgen-futures = "0.4"
log = "0.4"
