[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
# wasm-bindgen = "0.2"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# gloo-net = "0.6.0"
# # gloo-file = "0.1"
# web-sys = { version = "0.3.72" }
# wasm-bindgen-futures = "0.4"
# log = "0.4"
# base64 = "0.22.1"

# gloo = { version = "0.11.0", features = ["file"] }
# task = "0.0.1"

# # gloo = { version = "0.2", features = ["console"] }
# # gloo-file = "0.2"
# gloo-file = "0.3"
# yew = { version = "0.22.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-net = "0.4" # For making HTTP requests
gloo-file = "0.3" # For handling file uploads
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.45"
log = "0.4.22"
gloo = "0.11.0"
formdata = "0.13.0"
renderer = "0.0.0"
