[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlSelectElement",
    "HtmlOptionElement",
    "HtmlElement",
    "Event",
    "EventTarget",
    "Element"
]}
gloo-net = "0.4" # For making HTTP requests
gloo-file = "0.3" # For handling file uploads
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.45"
log = "0.4.22"
gloo = "0.11.0"
formdata = "0.13.0"
renderer = "0.0.0"
